# enzymeml-specifications

./: 404.html  CNAME  README.md  gen.toml  index.html  links.yml  mkdocs.yml  pyenzyme_schema.md  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  gen.yml  generate-docs.yml  generate_api.yaml  spelling.yaml
PyEnzyme/: __init__.py
PyEnzyme/core/: __init__.py  abstractspecies.py  calibration.py  complex.py  creator.py  datatypes.py  device.py  enzymemldocument.py  file.py  kineticmodel.py  kineticparameter.py  measurement.py  measurementdata.py  protein.py  reactant.py  reaction.py  reactionelement.py  replicate.py  sboterm.py  series.py  standardcurve.py  uvvisspectrum.py  vessel.py
PyEnzyme/schemes/: Ontologies.md  ```.md  (+3 more)
copyright/: index.html
diagrams/: v2.md
docs/: copyright.md  index.md  model.md  publications.md  team.md  usage.md  use_cases.md  validation.md
enzymeml-go/: README.md  REAMDE.md  go.mod  go.sum
enzymeml-jl/: Manifest.toml  Project.toml  README.md
enzymeml-rs/: Cargo.toml  README.md
enzymeml-ts/: package.json
examples/: EnzymeML template 96WP draft-0.2.7 2.xlsm  load_from_spreadsheet.ipynb
js/: treeviewer.js  validation.js
links/: sbml.py  sbml.toml
model/: index.html
publications/: index.html
pyenzyme/: v2.py
schemes/: enzymeml.json  enzymeml.shex  enzymeml.ttl  enzymeml.xsd
search/: search_index.json
specifications/: enzymeml-schema.json  enzymeml.md  v2.md
stylesheets/: treeviewer.css
team/: index.html
typescript/: package.json
usage/: index.html
use_cases/: index.html
validation/: index.html
(+56 files in other folders)
